<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:paddingHorizontal="@dimen/spacing_medium"
    android:background="@color/background"
    android:clipToPadding="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedChip="@+id/chip_trending_right_now"
        app:chipSpacingHorizontal="@dimen/spacing_small"
        android:layout_marginVertical="@dimen/spacing_small"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_trending_right_now"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trending_right_now" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_rock"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:checked="false"
            android:layout_height="wrap_content"
            android:text="@string/rock" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_hip_hop"
            style="@style/ChipStyle"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hip_hop" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_old"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:checked="false"
            android:layout_height="wrap_content"
            android:text="@string/old" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_classic"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:checked="false"
            android:layout_height="wrap_content"
            android:text="@string/classic" />

    </com.google.android.material.chip.ChipGroup>

</HorizontalScrollView>